Resolves: tdf#164895 Fix OOXML global names import without sheet reference

... like it's often the case in named expressions.

Wonder why that didn't pop up earlier..

Change-Id: Ie9d2b8642848981f420e45c6ede995f86e062903
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182318
Reviewed-by: Eike Rathke <erack@redhat.com>
Tested-by: Jenkins
(cherry picked from commit 23a9d6f069039fb8032362e00fbe42dea4ffb125)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/182360
Reviewed-by: Adolfo Jayme Barrientos <fitojb@ubuntu.com>